--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -65,7 +65,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tanda/5a227175-4991-4f59-ad13-ec9f68fe8f79'>Tanda - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tanda/5a227175-4991-4f59-ad13-ec9f68fe8f79'>Tanda - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -187,7 +187,7 @@ NodeJS.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/harmonic/job/ozJJ9fwU'>Harmonic Inc. Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/harmonic/job/ozJJ9fwU'>Harmonic Inc. Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Description. We are seeking for a Site Reliability Engineer who will be a part of a 
 team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
@@ -232,7 +232,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1777423'>Job Application for Senior Site Reliability Engineer at Cardlytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1777423'>Job Application for Senior Site Reliability Engineer at Cardlytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -289,7 +289,7 @@ for this job. Quizlet's mission is to help students (and their teachers) practic
 <p><span class="badge badge-light">Manchester</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tfgco/b5c0832d-f9cf-4a60-bfbc-70553e6e1bec'>TFG Co - Infrastructure/Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tfgco/b5c0832d-f9cf-4a60-bfbc-70553e6e1bec'>TFG Co - Infrastructure/Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -314,7 +314,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4351849002'>Job Application for Site Reliability Engineer at Oodle Finance</a></h5> 
+<h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4351849002'>Job Application for Site Reliability Engineer at Oodle Finance</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -326,7 +326,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/otvq9fwh'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/griddynamics/job/otvq9fwh'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -376,7 +376,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snagajob/jobs/1776495'>Job Application for Site Reliability Engineer at Snag</a></h5> 
+<h5><a href='https://boards.greenhouse.io/snagajob/jobs/1776495'>Job Application for Site Reliability Engineer at Snag</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -410,7 +410,7 @@ Identity?...</p>
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/loadsmart/6ede8981-3900-4d3f-ab7e-9a68a263ad68'>Loadsmart - Senior Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/loadsmart/6ede8981-3900-4d3f-ab7e-9a68a263ad68'>Loadsmart - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Brazil</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
